2011-01-18  Helder Correia  <helder@sencha.com>

Reviewed by Dirk Schulze.

        REGRESSION(75139): SVG gradients are not applied to texts
        https://bugs.webkit.org/show_bug.cgi?id=52531

        r75139 caused a problem with filling and stroking text with a gradient
        fill in SVG. The order of CGContextConcatCTM and CGContextClipToRect
        was mixed up.

        * platform/mac/svg/css/text-gradient-shadow-expected.checksum: Added.
        * platform/mac/svg/css/text-gradient-shadow-expected.png: Added.
        * platform/mac/svg/css/text-gradient-shadow-expected.txt: Added.
        * svg/css/text-gradient-shadow.svg: Added.
2011-01-18  Helder Correia  <helder@sencha.com>

        Reviewed by Dirk Schulze.

        REGRESSION(75139): SVG gradients are not applied to texts
        https://bugs.webkit.org/show_bug.cgi?id=52531

        r75139 caused a problem with filling and stroking text with a gradient
        fill in SVG. The order of CGContextConcatCTM and CGContextClipToRect
        was mixed up.

        Test: svg/css/text-gradient-shadow.svg

        * platform/graphics/cg/GraphicsContextCG.cpp:
        (WebCore::GraphicsContext::fillRect):

Canonical link: https://commits.webkit.org/66267@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76029 268f45cc-cd09-0410-ab3c-d52691b4dbfc